tests/run-pass/let_mut.si
// Test let and let mut variable bindings

@increment (n: int) -> int = run(
    let mut result = n,
    result = result + 1,
    result
)

@test_increment tests @increment () -> void = run(
    assert_eq(actual: increment(5), expected: 6),
    assert_eq(actual: increment(0), expected: 1),
    assert_eq(actual: increment(-1), expected: 0)
)

@counter () -> int = run(
    let mut count = 0,
    count = count + 1,
    count = count + 1,
    count = count + 1,
    count
)

@test_counter tests @counter () -> void = run(
    assert_eq(actual: counter(), expected: 3)
)

// Test immutable let (no reassignment)
@double (n: int) -> int = run(
    let x = n * 2,
    x
)

@test_double tests @double () -> void = run(
    assert_eq(actual: double(5), expected: 10),
    assert_eq(actual: double(0), expected: 0)
)
